ER-491: Fix letter-spacing

--- a/sites/all/themes/wille/sass/component/_login.scss
+++ b/sites/all/themes/wille/sass/component/_login.scss
@@ -1,8 +1,7 @@
-
 #user-login {
-
   .intro-text {
     line-height: 1.3;
+    margin-bottom: 10px;
     .lead {
       margin-bottom: 10px;
     }
